--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": ">=4.0.0",
     "compression": "latest",
     "lodash": ">=2.4.1",
-    "mongoose": ">=3.8.8"
+    "mongoose": ">=3.8.8",
+    "body-parser": "latest"
   },
   "devDependencies": {
     "connect-livereload": ">=0.4.0"
