--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "body-parser": "latest"
   },
   "devDependencies": {
-    "connect-livereload": ">=0.4.0",
+    "connect-livereload": "^0.4.0",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-babel": "^4.0.0",
@@ -24,8 +24,10 @@
     "gulp-plumber": "^1.0.0",
     "gulp-remove-code": "^1.0.2",
     "gulp-uglify": "^1.1.0",
+    "jspm": "^0.14.0",
     "merge-stream": "^0.1.7",
-    "mkdirp": "^0.5.0"
+    "mkdirp": "^0.5.0",
+    "sw-precache": "^1.2.6"
   },
   "engines": {
     "node": ">=0.10.0"
